<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">tigerboxApp</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="button_login">Anmelden</string>
    <string name="button_register">Registrieren</string>
    <string name="button_wifi_enter_left_text">Abbrechen</string>
    <string name="button_wifi_enter_right_text">Bestätigen</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="dialog_delete_all_downloads_confirmation_message">Alle heruntergeladenen Inhalte wurde gelöscht.\nUm Titel und tigercards ohne Internetverbindung\nzu hören, speichere diese bitte erneut.</string>
    <string name="dialog_delete_all_downloads_confirmation_title">Downloads wurden gelöscht</string>
    <string name="dialog_delete_all_downloads_message">Sollen tatsächlich alle heruntergeladenen\nInhalte gelöscht werden?</string>
    <string name="dialog_delete_all_downloads_positive_button">Downloads löschen</string>
    <string name="dialog_delete_all_downloads_title">Alle Downloads löschen</string>
    <string name="dialog_delete_profile_downloads_left_button">Aktives Profil</string>
    <string name="dialog_delete_profile_downloads_message">Entscheide, ob du nur die Downloads des aktiven\nProfils oder alle Downloads auf dieser tigerbox löschen möchtest.</string>
    <string name="dialog_delete_profile_downloads_right_button">Alle Downloads</string>
    <string name="dialog_delete_profile_downloads_title">Downloads wählen</string>
    <string name="dialog_error_message_cancel_button_text">Abbrechen</string>
    <string name="dialog_error_message_new_password_text">Neues Passwort</string>
    <string name="dialog_error_message_ok_button_text">OK</string>
    <string name="dialog_error_message_try_again">Noch ein Versuch</string>
    <string name="dialog_parental_gate_disabling_info_message">Wenn du die Kindersicherung für den Elternbereich wieder aus-\nschaltest, werden weder Zufallscode, noch Eltern-PIN weiter verlangt.\nDu kommst in den Elternbereich wieder ausschließlich, indem\ndu mit zwei Fingern von oben über den Bildschirm streichst.</string>
    <string name="dialog_parental_gate_disabling_info_title">Kindersicherung\nausschalten</string>
    <string name="dialog_parental_gate_disabling_positive_button">Ausschalten</string>
    <string name="dialog_parental_gate_enabling_info_message">Standardmäßig wird ein Zufallscode angezeigt,\nwenn du die Kindersicherung für den Elternbereich einschaltest. In der\ntigertones-App kannst du eine eigene Eltern-PIN vergeben, ändern\noder löschen. Diese gilt dann auch für die tigerbox TOUCH.</string>
    <string name="dialog_parental_gate_enabling_info_title">KINDERSICHERUNG\nEINSCHALTEN</string>
    <string name="dialog_parental_gate_enabling_positive_button">Einschalten</string>
    <string name="dialog_parental_gate_wrong_custom_pin_message">Bitte versuche es erneut.\nFalls du die Eltern-PIN vergessen hast\noder ändern möchtest, gehe in die\nEinstellungen der tigertones-App.</string>
    <string name="dialog_parental_gate_wrong_custom_pin_title">Falsche PIN!</string>
    <string name="dialog_parental_gate_wrong_pin_button">Erneut versuchen</string>
    <string name="dialog_parental_gate_wrong_random_pin_message">Bitte versuche es erneut.\nDiese Zahlen entsprechen nicht\ndem angezeigten Zufallscode.</string>
    <string name="dialog_parental_gate_wrong_random_pin_title">Falscher Code!</string>
    <string name="dialog_profile_list_help">In der tigertones-App kannst du Profile\nerstellen und bearbeiten.</string>
    <string name="dialog_profile_switch_help">Das Profil kannst du im Elternbereich\noder in der tigertones-App wechseln.</string>
    <string name="dialog_reset_message">Möchtest du mich wirklich auf die\nWerkseinstellungen zurücksetzen?\nAchtung: Damit löschst du alle Inhalte\nund Einstellungen!</string>
    <string name="dialog_reset_negative_button">Abbrechen</string>
    <string name="dialog_reset_positive_button">Zurücksetzen</string>
    <string name="dialog_reset_title">Zurück auf Anfang</string>
    <string name="dialog_time_limit_adjust_button">Anpassen</string>
    <string name="dialog_time_limit_reset_button">Zurücksetzen</string>
    <string name="dialog_time_limit_reset_or_adjust_message">Die neue tägliche Nutzungsdauer\nwurde gespeichert. Möchtest du die\nheutige Nutzungsdauer zurücksetzen\noder entsprechend anpassen?</string>
    <string name="dialog_time_limit_reset_or_adjust_title">Heutige Nutzungsdauer</string>
    <string name="error_203_headline">Playlistfehler</string>
    <string name="error_203_text">Ups, diese Playlist kann ich nicht aufrufen.</string>
    <string name="error_410_headline">Zugangsfehler</string>
    <string name="error_410_text">Ups, dein Premium-Account ist abgelaufen. Doch kein Problem: Mit einem neuen tigerticket geht der Hörspaß sofort weiter.</string>
    <string name="error_412_headline">Bin zu voll für das Update</string>
    <string name="error_412_text">Für das Update steht leider\nnicht ausreichend Speicherplatz\nzur Verfügung. Bitte lösche\neinige Downloads.</string>
    <string name="error_700_headline">Passwortfehler</string>
    <string name="error_700_text">Vertippt? Das WLAN-Passwort ist\nleider nicht richtig.</string>
    <string name="error_701_headline">Netzwerkfehler</string>
    <string name="error_701_text">Leider ist beim Einrichten ein\nkleiner Fehler aufgetreten.</string>
    <string name="error_703_button_text">Erneut verbinden</string>
    <string name="error_703_headline">Verbindungsfehler</string>
    <string name="error_703_text">Leider konnte keine\nVerbindung mit dem Internet\nhergestellt werden.</string>
    <string name="error_800_headline">wildcard nicht verknüpft</string>
    <string name="error_800_text">Die wildcard konnte nicht mit deinem\nAccount verknüpft werden. Versuche es\nspäter nochmal oder wende dich\nan den Support.</string>
    <string name="error_801_headline">wildcard nicht gefunden</string>
    <string name="error_801_text">Diese wildcard konnte nicht\ngefunden werden. Bitte wende\ndich an unseren Support.</string>
    <string name="error_802_headline">wildcard nicht abspielbar</string>
    <string name="error_802_text">Der Inhalt dieser wildcard ist nicht für andere Benutzer freigegeben worden.</string>
    <string name="error_803_headline"># wildcard nicht abspielbar</string>
    <string name="error_803_text">Der hochgeladene Inhalt für diese\nwildcard ist noch nicht verarbeitet\nworden. Bitte versuche es später\nnoch einmal.</string>
    <string name="error_900_headline">Hardwarefehler</string>
    <string name="onboarding_box_data_not_found__title">Verknüpfung fehlgeschlagen</string>
    <string name="onboarding_box_data_not_found_button_text">Weiter</string>
    <string name="onboarding_box_data_not_found_content">Leider konnte ich die Daten deiner tigerbox\nnicht finden. Bitte kontaktiere den Support\nund gib meine ID an:</string>
    <string name="onboarding_connected_content">Damit ich dir die ganze Auswahl an Hörspielen und Kindermusik anbieten kann, musst du dich im nächsten Schritt mit deinem tigertones Account anmelden. \n \n Du hast noch keinen Account? \n Dann registriere dich kostenlos. \n</string>
    <string name="onboarding_connected_title">Lass uns verbinden!</string>
    <string name="onboarding_login_buttonText">Weiter</string>
    <string name="onboarding_login_content">Bitte melde dich mit deinem E-Mail-Adresse &amp; Passwort an.</string>
    <string name="onboarding_login_title">Account verknüpfen</string>
    <string name="onboarding_password_hint">Passwort</string>
    <string name="onboarding_password_label">Passwort</string>
    <string name="onboarding_step1_buttonText">Los geht’s!</string>
    <string name="onboarding_step1_content">Lass uns gemeinsam die große Hörspaßwelt entdecken!</string>
    <string name="onboarding_step1_title">Da bist du ja!</string>
    <string name="onboarding_step3_buttonText">Weiter</string>
    <string name="onboarding_step3_content">Bitte wähle im folgenden Schritt das WLAN aus,\n mit dem du mich verbinden möchtest.\n Anschließend gibst du bitte das Passwort\n für das WLAN ein und schon verbinde ich mich.\n \n</string>
    <string name="onboarding_step3_title">Verbinde mich mit dem WLAN!</string>
    <string name="onboarding_username_hint">E-Mail-Adresse</string>
    <string name="onboarding_username_label">E-Mail-Adresse</string>
    <string name="ota_available_button">Jetzt updaten</string>
    <string name="ota_available_headline">Update entdeckt</string>
    <string name="ota_available_text">Ich habe ein neues Update gefunden.\nDies kann einige Minuten dauern.\nDanach kann der Hörspaß gleich\nbeginnen.</string>
    <string name="ota_not_available_button">Alles klar</string>
    <string name="ota_not_available_headline">Kein Update in Sicht</string>
    <string name="ota_not_available_text">Die Software sitzt perfekt. Die \naktuellsten Geschichten sind schon da. \nIch bin auf dem neuesten Stand.</string>
    <string name="wildcard_reassigning_screen2_leftButton">Abbrechen</string>
    <string name="wildcard_reassigning_screen2_rightButton">Jetzt verknüpfen</string>
    <string name="wildcard_reassigning_screen2_text1">Du kannst diese wildcard jetzt mit deinem Account\n%s\nverknüpfen!</string>
    <string name="wildcard_reassigning_screen2_text2">Achtung: Die wildcard wird dadurch geleert.</string>
    <string name="wildcard_reassigning_screen2_title">wildcard verknüpfen</string>
</resources>