<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:tag="layout/fragment_onboarding_login_0" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_margin="@dimen/onboarding_layout_margin">
    <TextView android:id="@+id/onboarding_login_title" android:text="@string/onboarding_login_title" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="?attr/onboardingTitleTextStyle1"/>
    <TextView android:id="@+id/onboarding_login_body" android:text="@string/onboarding_login_content" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/onboarding_login_title" style="?attr/onboardingBodyTextStyle1"/>
    <TextView android:gravity="start" android:id="@+id/onboarding_login_username_textView" android:text="@string/onboarding_username_label" app:layout_constraintBaseline_toBaselineOf="@+id/onboarding_login_username_editText" app:layout_constraintStart_toStartOf="@+id/onboarding_login_password_textView" style="?attr/onboardingBodyTextStyle1"/>
    <EditText android:textColorHint="@color/login_text_hint" android:id="@+id/onboarding_login_username_editText" android:layout_marginBottom="@dimen/dp_10" android:hint="@string/onboarding_username_hint" android:inputType="textEmailAddress" android:layout_marginEnd="@dimen/onboarding_dialog_wifi_list_wifi_icon_size" app:layout_constraintBottom_toTopOf="@+id/onboarding_login_guideline_horizontal" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/onboarding_login_username_textView" style="@style/Onboarding.InputText"/>
    <TextView android:gravity="start" android:id="@+id/onboarding_login_password_textView" android:text="@string/onboarding_password_label" app:layout_constraintBaseline_toBaselineOf="@+id/onboarding_login_password_editText_layout" app:layout_constraintStart_toStartOf="0" style="?attr/onboardingBodyTextStyle1"/>
    <com.google.android.material.textfield.TextInputLayout android:theme="@style/PasswordToggleTransparent" android:textColorHint="@color/login_text_hint" android:id="@+id/onboarding_login_password_editText_layout" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_10" app:hintEnabled="false" app:layout_constraintEnd_toEndOf="@+id/onboarding_login_username_editText" app:layout_constraintStart_toStartOf="@+id/onboarding_login_username_editText" app:layout_constraintTop_toBottomOf="@+id/onboarding_login_guideline_horizontal" app:passwordToggleEnabled="true">
        <com.google.android.material.textfield.TextInputEditText android:textColorHint="@color/login_text_hint" android:id="@+id/onboarding_login_password_editText" android:layout_width="match_parent" android:hint="@string/onboarding_password_hint" android:inputType="textPassword" android:imeOptions="actionDone" style="@style/Onboarding.InputText"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button android:id="@+id/onboarding_login_button" android:tag="binding_1" android:text="@string/onboarding_login_buttonText" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" style="@style/Onboarding.Button"/>
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@+id/onboarding_login_guideline_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.5"/>
</androidx.constraintlayout.widget.ConstraintLayout>
