<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_margin="@dimen/onboarding_layout_margin">
    <TextView android:id="@+id/onboarding_connectedWithInternet_title" android:text="@string/onboarding_connected_title" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="?attr/onboardingTitleTextStyle1"/>
    <TextView android:id="@+id/onboarding_connectedWithInternet_body" android:text="@string/onboarding_connected_content" app:layout_constraintBottom_toTopOf="@+id/onboarding_connectedWithInternet_registration_button" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/onboarding_connectedWithInternet_title" style="?attr/onboardingBodyTextStyle1"/>
    <Button android:id="@+id/onboarding_connectedWithInternet_login_button" android:text="@string/button_login" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/onboarding_connectedWithInternet_registration_button" style="@style/Onboarding.Button"/>
    <Button android:id="@+id/onboarding_connectedWithInternet_registration_button" android:text="@string/button_register" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toStartOf="@+id/onboarding_connectedWithInternet_login_button" app:layout_constraintStart_toStartOf="0" style="@style/Onboarding.Button"/>
</androidx.constraintlayout.widget.ConstraintLayout>
