<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/relativeLayout3" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_margin="@dimen/onboarding_layout_margin">
    <TextView android:id="@+id/onboarding_step3_title" android:text="@string/onboarding_step3_title" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="?attr/onboardingTitleTextStyle1"/>
    <TextView android:id="@+id/onboarding_step3_body" android:layout_marginTop="@dimen/dp_40" android:text="@string/onboarding_step3_content" app:layout_constraintBottom_toTopOf="@+id/onboarding_step3_button" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/onboarding_step3_title" style="?attr/onboardingBodyTextStyle1"/>
    <Button android:id="@+id/onboarding_step3_button" android:text="@string/onboarding_step3_buttonText" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" style="@style/Onboarding.Button"/>
</androidx.constraintlayout.widget.ConstraintLayout>
