<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/wildcard_reassigning_step_2_container" android:background="@mipmap/background_tiger_box" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:id="@+id/wildcard_reassigning_step_2_title" android:layout_width="match_parent" android:text="@string/wildcard_reassigning_screen2_title" app:layout_constraintBottom_toTopOf="@+id/wildcard_reassigning_step_2_text" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="?attr/onboardingTitleTextStyle1"/>
    <TextView android:id="@+id/wildcard_reassigning_step_2_text" android:layout_width="match_parent" android:text="@string/wildcard_reassigning_screen2_text1" app:layout_constraintBottom_toTopOf="@+id/textView" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/wildcard_reassigning_step_2_title" style="?attr/onboardingBodyTextStyle1"/>
    <TextView android:textStyle="bold" android:id="@+id/textView" android:layout_width="match_parent" android:text="@string/wildcard_reassigning_screen2_text2" app:layout_constraintBottom_toTopOf="@+id/wildcard_reassigning_step_2_cancel_button" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/wildcard_reassigning_step_2_text" style="?attr/onboardingBodyTextStyle1"/>
    <Button android:id="@+id/wildcard_reassigning_step_2_cancel_button" android:background="@drawable/selector_onboarding_dialog_button_cancel" android:layout_width="@dimen/dp_300" android:text="@string/wildcard_reassigning_screen2_leftButton" android:layout_marginEnd="@dimen/dp_20" app:layout_constraintBottom_toBottomOf="@+id/wildcard_reassigning_step_2_ok_button" app:layout_constraintEnd_toStartOf="@+id/wildcard_reassigning_step_2_ok_button" app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="@+id/wildcard_reassigning_step_2_ok_button" style="@style/Onboarding.Button.Dialog"/>
    <Button android:id="@+id/wildcard_reassigning_step_2_ok_button" android:layout_width="@dimen/dp_300" android:layout_marginBottom="@dimen/onboarding_dialog_button_bottom_margin" android:text="@string/wildcard_reassigning_screen2_rightButton" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/wildcard_reassigning_step_2_cancel_button" style="@style/Onboarding.Button"/>
</androidx.constraintlayout.widget.ConstraintLayout>
