<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:tag="layout/fragment_onboarding_update_start_0" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_margin="@dimen/onboarding_layout_margin">
    <TextView android:id="@+id/onboarding_startUpdate_title" android:text="@string/ota_available_headline" app:layout_constraintBottom_toTopOf="@+id/onboarding_startUpdate_body" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="?attr/onboardingTitleTextStyle1"/>
    <TextView android:id="@+id/onboarding_startUpdate_body" android:text="@string/ota_available_text" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toStartOf="@+id/onboarding_startUpdate_image" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="?attr/onboardingBodyTextStyle1"/>
    <ImageView android:id="@+id/onboarding_startUpdate_image" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/onboarding_startUpdate_body" app:layout_constraintTop_toTopOf="0" app:srcCompat="@drawable/ota_update_stars"/>
    <Button android:id="@+id/onboarding_cancel_button" android:tag="binding_1" android:background="@drawable/selector_onboarding_dialog_button_cancel" android:text="@string/dialog_error_message_cancel_button_text" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toStartOf="@+id/onboarding_startUpdate_button" app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="@+id/onboarding_startUpdate_button" style="@style/Onboarding.Button.Dialog"/>
    <Button android:id="@+id/onboarding_startUpdate_button" android:text="@string/ota_available_button" android:layout_marginStart="@dimen/onboarding_dialog_buttons_interspace" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/onboarding_cancel_button" style="@style/Onboarding.Button"/>
</androidx.constraintlayout.widget.ConstraintLayout>
