<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/wildcard_reassigning_step_2_container" android:background="@color/tb_new_black" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@+id/fragment_parentalGate_disableStep_guideline" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.5"/>
    <TextView android:textColor="@color/tb_new_yellow" android:id="@+id/fragment_parentalGate_disableStep_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="35dp" android:text="@string/dialog_parental_gate_disabling_info_title" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="@style/TigerBox.Headline1.FullscreenView"/>
    <TextView android:id="@+id/fragment_parentalGate_disableStep_message" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/dp_15" android:text="@string/dialog_parental_gate_disabling_info_message" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/fragment_parentalGate_disableStep_title" style="@style/TigerBox.Paragraph"/>
    <Button android:id="@+id/fragment_parentalGate_disableStep_cancel_button" android:layout_marginBottom="@dimen/dp_40" android:text="@string/wildcard_reassigning_screen2_leftButton" android:layout_marginStart="@dimen/dp_20" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toStartOf="@+id/fragment_parentalGate_disableStep_guideline" app:layout_constraintStart_toStartOf="0" style="@style/TigerBox.Headline2.Button.Secondary"/>
    <Button android:id="@+id/fragment_parentalGate_disableStep_ok_button" android:layout_marginBottom="@dimen/dp_40" android:text="@string/dialog_parental_gate_disabling_positive_button" android:layout_marginEnd="@dimen/dp_20" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/fragment_parentalGate_disableStep_guideline" style="@style/TigerBox.Headline2.Button.Primary"/>
</androidx.constraintlayout.widget.ConstraintLayout>
