<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_margin="@dimen/onboarding_layout_margin">
    <TextView android:id="@+id/otaNoUpdate_title" android:text="@string/ota_not_available_headline" app:layout_constraintBottom_toTopOf="@+id/otaNoUpdate_body" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="?attr/onboardingTitleTextStyle1"/>
    <TextView android:id="@+id/otaNoUpdate_body" android:text="@string/ota_not_available_text" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toStartOf="@+id/otaNoUpdate_image" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="?attr/onboardingBodyTextStyle1"/>
    <ImageView android:id="@+id/otaNoUpdate_image" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/otaNoUpdate_body" app:layout_constraintTop_toTopOf="0" app:srcCompat="@drawable/ota_update_stars"/>
    <Button android:id="@+id/otaNoUpdate_button" android:text="@string/ota_not_available_button" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" style="@style/Onboarding.Button"/>
</androidx.constraintlayout.widget.ConstraintLayout>
