<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:tag="layout/fragment_onboarding_backend_response_0" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_margin="@dimen/onboarding_layout_margin">
    <TextView android:id="@+id/onboarding_backendResponse_title" android:text="@string/onboarding_box_data_not_found__title" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="?attr/onboardingTitleTextStyle1"/>
    <TextView android:id="@+id/onboarding_backendResponse_body" android:layout_marginTop="@dimen/dp_10" android:text="@string/onboarding_box_data_not_found_content" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/onboarding_backendResponse_title" style="?attr/onboardingBodyTextStyle1"/>
    <TextView android:id="@+id/onboarding_backendResponse_id" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/onboarding_backendResponse_body" style="?attr/onboardingTitleTextStyle1"/>
    <Button android:id="@+id/onboarding_backendResponse_button" android:tag="binding_1" android:text="@string/onboarding_box_data_not_found_button_text" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" style="@style/Onboarding.Button"/>
</androidx.constraintlayout.widget.ConstraintLayout>
